// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AppWrapper Long Content 1`] = `
<div
  className="app-wrapper theme-light"
  style={
    Object {
      "minHeight": 768,
    }
  }
>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <div
    style={
      Object {
        "bottom": 0,
        "position": "absolute",
      }
    }
  >
    Don't cut me off. EVER. Or unless the page is long enough. :D
  </div>
</div>
`;

exports[`Storyshots AppWrapper Moderate Content 1`] = `
<div
  className="app-wrapper theme-light"
  style={
    Object {
      "minHeight": 768,
    }
  }
>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <p>
    Lorem ipsum, my dude!
  </p>
  <div
    style={
      Object {
        "bottom": 0,
        "position": "absolute",
      }
    }
  >
    Don't cut me off. EVER. Or unless the page is long enough. :D
  </div>
</div>
`;

exports[`Storyshots AppWrapper Too Short Content 1`] = `
<div
  className="app-wrapper theme-light"
  style={
    Object {
      "minHeight": 768,
    }
  }
>
  <p>
    Lorem ipsum, my dude!
  </p>
  <div
    style={
      Object {
        "bottom": 0,
        "position": "absolute",
      }
    }
  >
    Don't cut me off. EVER. Or unless the page is long enough. :D
  </div>
</div>
`;

exports[`Storyshots AppWrapper Too Wide Content 1`] = `
<div
  className="app-wrapper theme-light"
  style={
    Object {
      "minHeight": 768,
    }
  }
>
  <p
    style={
      Object {
        "width": "1000px",
      }
    }
  >
    I'm fat as sh
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    <span>
      i
    </span>
    t.
  </p>
  <p>
    But I do not create horizontal scrolling.
  </p>
  <div
    style={
      Object {
        "bottom": 0,
        "position": "absolute",
      }
    }
  >
    Don't cut me off. EVER. Or unless the page is long enough. :D
  </div>
</div>
`;

exports[`Storyshots AppWrapper With Dark Mode 1`] = `
<div
  className="app-wrapper theme-dark"
  style={
    Object {
      "minHeight": 768,
    }
  }
>
  <p>
    Please note that viewport units in an iframe are apparently not the same as devices?
  </p>
  <p>
    Please note that viewport units in an iframe are apparently not the same as devices?
  </p>
  <p>
    Please note that viewport units in an iframe are apparently not the same as devices?
  </p>
  <p>
    Please note that viewport units in an iframe are apparently not the same as devices?
  </p>
  <p>
    Please note that viewport units in an iframe are apparently not the same as devices?
  </p>
  <p>
    Please note that viewport units in an iframe are apparently not the same as devices?
  </p>
  <div
    style={
      Object {
        "bottom": 0,
        "position": "absolute",
      }
    }
  >
    Don't cut me off. EVER. Or unless the page is long enough. :D
  </div>
</div>
`;

exports[`Storyshots BackgroundDimmer Default 1`] = `
<div
  style={
    Object {
      "color": "white",
      "height": "2000px",
    }
  }
>
  This should be scrollable but it is not because of the background dimmer.
  <span
    className="background-dimmer"
    data-testid="background-dimmer"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots LoadingSpinner Default 1`] = `
<div
  className="storybook-center-center"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
      "width": "100vw",
    }
  }
>
  <div
    className="loading"
  >
    <svg
      className="spinner"
      fill="none"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M98 50C99.1046 50 100.004 49.1039 99.96 48.0002C99.4856 36.1395 94.8032 24.8085 86.7161 16.06C78.1756 6.82091 66.4659 1.14128 53.923 0.154133C41.38 -0.833018 28.926 2.94488 19.0453 10.7342C9.16465 18.5234 2.5838 29.7514 0.615583 42.1783C-1.35263 54.6051 1.43648 67.3172 8.42652 77.7785C15.4166 88.2398 26.0936 95.6813 38.3277 98.6185C50.5618 101.556 63.4536 99.7725 74.4311 93.6248C84.8257 87.8035 92.7805 78.474 96.8968 67.3404C97.2799 66.3044 96.7012 65.1741 95.6507 64.8328L76.8662 58.7294C75.8157 58.388 74.6945 58.9667 74.2742 59.9882C72.0303 65.442 68.005 70.0015 62.8257 72.902C57.0628 76.1294 50.2949 77.0655 43.8723 75.5236C37.4497 73.9816 31.8445 70.075 28.1749 64.5831C24.5053 59.0911 23.0411 52.4176 24.0744 45.8938C25.1076 39.37 28.5624 33.4755 33.7495 29.3864C38.9366 25.2972 45.4747 23.3139 52.0595 23.8321C58.6442 24.3503 64.7915 27.332 69.2751 32.1823C73.3045 36.5413 75.7239 42.1216 76.1727 48.0018C76.2567 49.1032 77.1442 50 78.2488 50H98Z"
        fill="black"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots LoadingSpinner Green 1`] = `
<div
  className="storybook-center-center"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
      "width": "100vw",
    }
  }
>
  <div
    className="loading"
  >
    <svg
      className="spinner"
      fill="none"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M98 50C99.1046 50 100.004 49.1039 99.96 48.0002C99.4856 36.1395 94.8032 24.8085 86.7161 16.06C78.1756 6.82091 66.4659 1.14128 53.923 0.154133C41.38 -0.833018 28.926 2.94488 19.0453 10.7342C9.16465 18.5234 2.5838 29.7514 0.615583 42.1783C-1.35263 54.6051 1.43648 67.3172 8.42652 77.7785C15.4166 88.2398 26.0936 95.6813 38.3277 98.6185C50.5618 101.556 63.4536 99.7725 74.4311 93.6248C84.8257 87.8035 92.7805 78.474 96.8968 67.3404C97.2799 66.3044 96.7012 65.1741 95.6507 64.8328L76.8662 58.7294C75.8157 58.388 74.6945 58.9667 74.2742 59.9882C72.0303 65.442 68.005 70.0015 62.8257 72.902C57.0628 76.1294 50.2949 77.0655 43.8723 75.5236C37.4497 73.9816 31.8445 70.075 28.1749 64.5831C24.5053 59.0911 23.0411 52.4176 24.0744 45.8938C25.1076 39.37 28.5624 33.4755 33.7495 29.3864C38.9366 25.2972 45.4747 23.3139 52.0595 23.8321C58.6442 24.3503 64.7915 27.332 69.2751 32.1823C73.3045 36.5413 75.7239 42.1216 76.1727 48.0018C76.2567 49.1032 77.1442 50 78.2488 50H98Z"
        fill="green"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots LoadingSpinner Slower 1`] = `
<div
  className="storybook-center-center"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
      "width": "100vw",
    }
  }
>
  <div
    className="loading"
  >
    <svg
      className="spinner"
      fill="none"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M98 50C99.1046 50 100.004 49.1039 99.96 48.0002C99.4856 36.1395 94.8032 24.8085 86.7161 16.06C78.1756 6.82091 66.4659 1.14128 53.923 0.154133C41.38 -0.833018 28.926 2.94488 19.0453 10.7342C9.16465 18.5234 2.5838 29.7514 0.615583 42.1783C-1.35263 54.6051 1.43648 67.3172 8.42652 77.7785C15.4166 88.2398 26.0936 95.6813 38.3277 98.6185C50.5618 101.556 63.4536 99.7725 74.4311 93.6248C84.8257 87.8035 92.7805 78.474 96.8968 67.3404C97.2799 66.3044 96.7012 65.1741 95.6507 64.8328L76.8662 58.7294C75.8157 58.388 74.6945 58.9667 74.2742 59.9882C72.0303 65.442 68.005 70.0015 62.8257 72.902C57.0628 76.1294 50.2949 77.0655 43.8723 75.5236C37.4497 73.9816 31.8445 70.075 28.1749 64.5831C24.5053 59.0911 23.0411 52.4176 24.0744 45.8938C25.1076 39.37 28.5624 33.4755 33.7495 29.3864C38.9366 25.2972 45.4747 23.3139 52.0595 23.8321C58.6442 24.3503 64.7915 27.332 69.2751 32.1823C73.3045 36.5413 75.7239 42.1216 76.1727 48.0018C76.2567 49.1032 77.1442 50 78.2488 50H98Z"
        fill="blue"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Navbar Default 1`] = `
<nav
  className="navbar"
  style={
    Object {
      "backgroundColor": "rgba(255,255,255, 1)",
      "color": "#000000",
    }
  }
>
  <span
    className="logo-link"
  >
    Logo Over Here
  </span>
  <span
    className="nav-link-list"
  >
    <a
      className="nav-link"
      href="/"
      onClick={[Function]}
      style={
        Object {
          "color": "#000000",
        }
      }
    >
      Home
    </a>
    <a
      className="nav-link"
      href="/about"
      onClick={[Function]}
      style={
        Object {
          "color": "#000000",
        }
      }
    >
      About
    </a>
  </span>
</nav>
`;

exports[`Storyshots Navbar Opaque Background 1`] = `
<nav
  className="navbar"
  style={
    Object {
      "backgroundColor": "rgba(255,0,0, 1)",
      "color": "yellow",
    }
  }
>
  <span
    className="logo-link"
  >
    Logo Over Here
  </span>
  <span
    className="nav-link-list"
  >
    <a
      className="nav-link"
      href="/"
      onClick={[Function]}
      style={
        Object {
          "color": "yellow",
        }
      }
    >
      Home
    </a>
    <a
      className="nav-link"
      href="/about"
      onClick={[Function]}
      style={
        Object {
          "color": "yellow",
        }
      }
    >
      About
    </a>
  </span>
</nav>
`;

exports[`Storyshots Navbar Transparent Background 1`] = `
<nav
  className="navbar"
  style={
    Object {
      "backgroundColor": "rgba(255,255,255, 0)",
      "color": "white",
    }
  }
>
  <span
    className="logo-link"
  >
    Logo Over Here
  </span>
  <span
    className="nav-link-list"
  >
    <a
      className="nav-link"
      href="/"
      onClick={[Function]}
      style={
        Object {
          "color": "white",
        }
      }
    >
      Home
    </a>
    <a
      className="nav-link"
      href="/about"
      onClick={[Function]}
      style={
        Object {
          "color": "white",
        }
      }
    >
      About
    </a>
  </span>
</nav>
`;

exports[`Storyshots SVG Default 1`] = `
<svg
  fill="none"
  height="281"
  viewBox="0 0 279 281"
  width="279"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 20C0 8.95431 8.95431 0 20 0H139.07H258.14C269.186 0 278.14 8.95431 278.14 20V145.094C278.14 150.711 275.778 156.069 271.632 159.858L152.562 268.67C144.922 275.652 133.218 275.652 125.578 268.67L6.5081 159.858C2.36185 156.069 0 150.711 0 145.094V20Z"
    fill="#770000"
  />
  <path
    d="M0 20C0 8.95431 8.95431 0 20 0H139.07H258.14C269.186 0 278.14 8.95431 278.14 20V145.094C278.14 150.711 275.778 156.069 271.632 159.858L152.562 268.67C144.922 275.652 133.218 275.652 125.578 268.67L6.5081 159.858C2.36185 156.069 0 150.711 0 145.094V20Z"
    fill="url(#paint0_diamond)"
  />
  <path
    d="M13.8936 23.7225C13.8936 18.1996 18.3708 13.7225 23.8936 13.7225H139.07H254.246C259.769 13.7225 264.246 18.1996 264.246 23.7225V143.856C264.246 146.679 263.053 149.371 260.961 151.266L145.525 255.877C141.708 259.336 135.888 259.329 132.078 255.862L17.1624 151.265C15.0804 149.37 13.8936 146.685 13.8936 143.87V23.7225Z"
    fill="#01001D"
  />
  <path
    d="M13.8936 23.7225C13.8936 18.1996 18.3708 13.7225 23.8936 13.7225H139.07H254.246C259.769 13.7225 264.246 18.1996 264.246 23.7225V143.856C264.246 146.679 263.053 149.371 260.961 151.266L145.525 255.877C141.708 259.336 135.888 259.329 132.078 255.862L17.1624 151.265C15.0804 149.37 13.8936 146.685 13.8936 143.87V23.7225Z"
    fill="url(#paint1_radial)"
  />
  <path
    d="M189.186 138.223L189.153 138.224C166.196 138.736 147.511 136.049 111.707 128.83C107.366 127.954 102.893 127.752 98.5014 128.185C79.1609 130.092 66.4963 130.471 58.6875 129.921C54.7545 129.644 52.265 129.144 50.825 128.598C50.4293 128.448 50.1697 128.319 50.0044 128.222C50.9803 120.527 53.0227 116.477 54.4924 113.562C54.7273 113.097 54.9475 112.66 55.1465 112.242C56.4087 109.59 56.1175 106.8 55.767 104.778C55.3564 102.41 54.9207 100.236 54.524 98.2564C54.4073 97.6741 54.294 97.1087 54.1857 96.5601C53.671 93.9529 54.0155 91.9153 54.8048 90.3408C55.603 88.7483 56.9667 87.4111 58.8376 86.4166C62.6434 84.3937 68.2955 83.9538 73.8597 85.7169C79.6103 87.5389 85.7693 87.3613 91.423 85.3952L94.33 84.3842C98.5258 82.9251 102.03 79.8425 104.702 76.3593C107.39 72.8569 109.397 68.7455 110.522 64.8839C111.316 62.1617 112.659 60.4165 114.198 59.3417C115.757 58.2534 117.726 57.7064 119.985 57.7578C124.572 57.8622 130.017 60.4563 134.028 65.1196C135.317 66.6174 136.623 68.0926 137.954 69.5448C142.335 74.3278 146.973 78.8599 152.071 83.1347C157.405 87.6072 163.232 91.7883 169.783 95.6785C174.963 98.7536 181.496 100.247 187.95 101.533C194.14 102.765 200.674 102.344 206.739 101.953C207.105 101.929 207.469 101.906 207.832 101.883C214.385 101.467 220.383 101.198 225.858 102.637C228.756 103.399 231.225 104.865 232.97 106.973C234.697 109.058 235.856 111.936 235.888 115.8C235.891 116.174 235.879 116.54 235.852 116.9C235.643 117.817 235.451 118.693 235.267 119.533C235.204 119.821 235.142 120.104 235.081 120.383C233.264 125.197 228.423 129.274 221.063 132.393C212.214 136.143 200.579 138.094 189.186 138.223ZM49.7445 128.031C49.7464 128.031 49.7593 128.042 49.7777 128.067C49.7519 128.044 49.7427 128.032 49.7445 128.031ZM110.505 134.712C137.827 140.221 155.486 143.159 172.789 144.015C158.989 144.296 142.066 144.092 121.27 143.352C117.068 143.202 112.691 143.719 108.59 145.279C104.223 146.941 97.5564 148.838 68.6947 148.135C60.4043 147.934 53.4703 142.437 50.9584 134.897C52.9271 135.371 55.3528 135.703 58.2481 135.907C66.571 136.493 79.6387 136.072 99.0723 134.156C102.891 133.78 106.766 133.958 110.505 134.712Z"
    fill="#FFC700"
    stroke="#FFF7AA"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="6"
  />
  <defs>
    <radialGradient
      cx="0"
      cy="0"
      gradientTransform="translate(278.14) rotate(131.201) scale(248.031 321.553)"
      gradientUnits="userSpaceOnUse"
      id="paint0_diamond"
      r="1"
    >
      <stop
        stop-color="#BC6E6E"
        stop-opacity="0.46"
      />
      <stop
        offset="1"
        stop-color="white"
        stop-opacity="0"
      />
    </radialGradient>
    <radialGradient
      cx="0"
      cy="0"
      gradientTransform="translate(135.081 112.959) rotate(89.0695) scale(245.652 250.332)"
      gradientUnits="userSpaceOnUse"
      id="paint1_radial"
      r="1"
    >
      <stop
        stop-color="#6B6B88"
      />
      <stop
        offset="1"
        stop-opacity="0"
      />
    </radialGradient>
  </defs>
</svg>
`;
